home-assistant/zigbee2mqtt/manifest.yml
---
# Source: zigbee2mqtt/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    helm.sh/chart: zigbee2mqtt-6.1.0
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
    app.kubernetes.io/version: "1.17.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
---
# Source: zigbee2mqtt/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  labels:
    helm.sh/chart: zigbee2mqtt-6.1.0
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
    app.kubernetes.io/version: "1.17.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
      app.kubernetes.io/instance: zigbee2mqtt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
        app.kubernetes.io/instance: zigbee2mqtt
    spec:
      
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: zigbee2mqtt
        image: "koenkk/zigbee2mqtt:1.18.1"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2257729-if00
          name: usb
        - mountPath: /app/configuration.yaml
          name: zigbee2mqtt-settings
          subPath: configuration.yaml
        
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-data
      - hostPath:
          path: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2257729-if00
        name: usb
      - configMap:
          name: zigbee2mqtt-settings
        name: zigbee2mqtt-settings
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: device
                operator: In
                values:
                - zigbee
