home-assistant/zigbee2mqtt/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: zigbee2mqtt
spec:
  rules:
  - host: zigbee.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zigbee2mqtt
            port:
              number: 8080
